TRABALHO04/transportadora_rascunho/backup (sem usar secret)/adminer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
        group: db
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  labels:
    group: db
spec:
  selector:
    app: adminer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: adminer-service
#  labels:
#    group: db
#spec:
#  selector:
#    app: adminer
#  type: ClusterIP
#  ports:
#    - protocol: TCP
#      port: 8080
#      targetPort: 8080
