TRABALHO04/transportadora_rascunho/backup (sem usar secret)/app-publisher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-deployment
  labels:
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
        group: backend
    spec:
      containers:
      - name: publisher
        image: tharbuini/trabalho-final-asa:publisher
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: 500m

---
apiVersion: v1
kind: Service
metadata:
  name: publisher-service
  labels:
    group: backend
spec:
  type: LoadBalancer  
  selector:
    app: publisher
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
