TRABALHO04/transportadora_rascunho/backup (sem usar secret)/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
    group: db
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        type: db
    spec:
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:                 
            - name: postgres-storage                
              mountPath: /var/lib/postgresql/data   
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    group: db
spec:
  type: ClusterIP
  selector: 
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
